fixed image spacing

--- a/static/index.css
+++ b/static/index.css
@@ -22,6 +22,7 @@ img{
     margin-left:auto;
     margin-right:auto;
     width:60%;
+    margin-bottom:4%;
 }
 ul.navbar {
   list-style-type: none;
